--- a/ecotrack/package.json
+++ b/ecotrack/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.12.3",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "sass": "^1.77.8",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
