--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15"
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "mapbox-gl": "^3.8.0",
+    "react-map-gl": "^7.1.7"
   }
 }
