create notif folder

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "lucide-react": "^0.469.0",
     "mapbox-gl": "^3.8.0",
     "react-map-gl": "^7.1.7"
   }
